--- a/package.json
+++ b/package.json
@@ -21,9 +21,14 @@
     "postinstall": "yarn husky install"
   },
   "dependencies": {
+    "@fastify/static": "^6.12.0",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-fastify": "^10.2.7",
+    "@nestjs/swagger": "^7.1.14",
+    "fastify": "^4.24.3",
+    "fastify-swagger": "^5.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -42,6 +47,7 @@
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.3",
     "jest": "^29.5.0",
     "prettier": "^2.8.8",
     "source-map-support": "^0.5.21",
@@ -50,8 +56,7 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3",
-    "husky": "^8.0.3"
+    "typescript": "^5.1.3"
   },
   "resolutions": {
     "@typescript-eslint/typescript-estree": "^5.59.2"
