--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "@fastify/static": "^6.12.0",
-    "@nestjs-modules/mailer": "^1.9.1",
+    "@fastify/swagger": "^8.12.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
@@ -36,7 +36,6 @@
     "@nestjs/swagger": "^7.1.14",
     "bcryptjs": "^2.4.3",
     "fastify": "^4.24.3",
-    "fastify-swagger": "^5.2.0",
     "handlebars": "^4.7.8",
     "mongoose": "^7.6.3",
     "passport": "^0.6.0",
@@ -73,7 +72,7 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.2.0"
   },
   "resolutions": {
     "@typescript-eslint/typescript-estree": "^5.59.2"
