--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,4 @@ LOG_LEVEL=debug
 AT_SECRET=at-secret
 RT_SECRET=rt-secret
 
-MONGODB_URI=mongodb://root:password123@db_mongo:27017/tracker?authSource=admin&readPreference=primary
-
-EMAIL_HOST=smtp.gmail.com
-EMAIL_USER=user
-EMAIL_PASS=pass
-EMAIL_FROM=from
+MONGODB_URI=mongodb://root:password123@localhost:27017/tracker?authSource=admin&readPreference=primary
