--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/platform-fastify": "^10.2.7",
     "@nestjs/swagger": "^7.1.14",
     "bcryptjs": "^2.4.3",
+    "class-validator": "^0.14.0",
     "fastify": "^4.24.3",
     "handlebars": "^4.7.8",
     "mongoose": "^7.6.3",
